--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </head>
 
 <body class="bg-gray-50 text-gray-800 font-inter transition-colors duration-300">
-    <div class="max-w-5xl mx-auto p-8 py-12">
+    <div class="max-w-6xl mx-auto p-8 py-12">
         <main>
             <header class="mb-12 text-center">
                 <img src="pp.jpg" alt="Profile Picture" class="w-32 h-32 rounded-full mx-auto mb-4 object-cover">
@@ -154,6 +154,9 @@
                                 <span
                                     class="bg-gray-100 px-3 py-1 rounded-lg text-gray-700 text-sm hover:bg-gray-200 transition-colors">
                                     SIMD</span>
+                                <span
+                                    class="bg-gray-100 px-3 py-1 rounded-lg text-gray-700 text-sm hover:bg-gray-200 transition-colors">
+                                    Qualcomm</span>
                                 <span
                                     class="bg-gray-100 px-3 py-1 rounded-lg text-gray-700 text-sm hover:bg-gray-200 transition-colors">
                                     GTEST-GMOCK</span>
@@ -310,90 +313,104 @@
                                             <span
                                                 class="bg-gray-100 px-3 py-1 rounded-lg text-gray-700 text-sm hover:bg-gray-200 transition-colors">Lauterbach
                                                 Debug</span>
+                                            <span
+                                                class="bg-gray-100 px-3 py-1 rounded-lg text-gray-700 text-sm hover:bg-gray-200 transition-colors">DOORS</span>
 
                                         </div>
                                     </div>
                                 </div>
 
-                                <div>
-                                    <h3 class="text-lg font-semibold text-gray-900">Embedded Systems Engineer
-                                    </h3>
-                                    <p class="text-gray-600 italic text-sm">Fpt Software Co., Vietnam | 07/15 -
-                                        11/17 |
-                                        Full-time
-                                    </p>
-                                    <ul class="mt-2 text-gray-700 list-disc list-inside">
-                                        <li>Developed a high-performance Car Rear View Camera system, improving
-                                            driver
-                                            visibility by
-                                            20%</li>
-                                        <li>Optimized SPI and MCU drivers for iMX6, reducing latency by 15% on
-                                            baremetal
-                                            Linux
-                                        </li>
-                                        <li>Enhanced system reliability with AUTOSAR BSW drivers, cutting
-                                            failure
-                                            rates
-                                            by
-                                            10%
-                                        </li>
-                                        <li>Improved communication efficiency by 25% with AUTOSAR CAN and
-                                            Ethernet
-                                            drivers
-                                        </li>
-                                        <li>Automated build processes with a local CI pipeline, slashing
-                                            deployment
-                                            time
-                                            by
-                                            40%
-                                        </li>
-                                    </ul>
-                                    <p class="mt-2 text-gray-600 italic">Key Skills: iMX8, AUTOSAR, C++, Python,
-                                        Qt
-                                    </p>
+                                <div class="space-y-6">
+                                    <div>
+                                        <h3 class="text-lg font-semibold text-gray-900">Embedded Systems Engineer
+                                        </h3>
+                                        <p class="text-gray-600 italic text-sm">Fpt Software Co., Vietnam | 07/15 -
+                                            11/17 |
+                                            Full-time
+                                        </p>
+                                        <ul class="mt-2 text-gray-700 list-disc list-inside">
+                                            <li>Developed a lightweight Car Rear View Camera system</li>
+                                            <li>Optimized SPI and MCU drivers for iMX6, reducing latency by 10% on
+                                                baremetal
+                                                Linux
+                                            </li>
+                                            <li>Migrated legacy modules to AUTOSAR BSW drivers
+                                            </li>
+                                        </ul>
+                                        <div class="mt-2 flex flex-wrap gap-2">
+                                            <span
+                                                class="bg-gray-100 px-3 py-1 rounded-lg text-gray-700 text-sm hover:bg-gray-200 transition-colors">C</span>
+                                            <span
+                                                class="bg-gray-100 px-3 py-1 rounded-lg text-gray-700 text-sm hover:bg-gray-200 transition-colors">C++</span>
+                                            <span
+                                                class="bg-gray-100 px-3 py-1 rounded-lg text-gray-700 text-sm hover:bg-gray-200 transition-colors">NXP
+                                                iMX8</span>
+                                            <span
+                                                class="bg-gray-100 px-3 py-1 rounded-lg text-gray-700 text-sm hover:bg-gray-200 transition-colors">AUTOSAR</span>
+                                            <span
+                                                class="bg-gray-100 px-3 py-1 rounded-lg text-gray-700 text-sm hover:bg-gray-200 transition-colors">Python</span>
+
+                                        </div>
+                                    </div>
                                 </div>
 
-                                <div>
-                                    <h3 class="text-lg font-semibold text-gray-900">Field Maintenance Engineer
-                                    </h3>
-                                    <p class="text-gray-600 italic text-sm">General Motors, Egypt | 02/15 -
-                                        05/15 |
-                                        Full-time
-                                    </p>
-                                    <ul class="mt-2 text-gray-700 list-disc list-inside">
-                                        <li>Automated plant operations with PLC, increasing production uptime by
-                                            15%
-                                        </li>
-                                        <li>Integrated advanced sensors into production lines, boosting accuracy
-                                            by
-                                            20%
-                                        </li>
-                                        <li>Developed maintenance plans that reduced downtime by 25%, enhancing
-                                            plant
-                                            efficiency
-                                        </li>
-                                    </ul>
-                                    <p class="mt-2 text-gray-600 italic">Key Skills: PLC, Sensors, DCS</p>
+                                <div class="space-y-6">
+                                    <div>
+                                        <h3 class="text-lg font-semibold text-gray-900">Field Maintenance Engineer
+                                        </h3>
+                                        <p class="text-gray-600 italic text-sm">General Motors, Egypt | 02/15 -
+                                            05/15 |
+                                            Full-time
+                                        </p>
+                                        <ul class="mt-2 text-gray-700 list-disc list-inside">
+                                            <li>Maintained plant operations in PLC.
+                                            </li>
+                                            <li>Proposed an adopted IP to integrate advanced sensors into production
+                                                lines, boosting ergonomics and safety.
+                                            </li>
+                                            <li>Actively developed maintenance plans that reduced downtime
+                                            </li>
+                                        </ul>
+                                        <div class="mt-2 flex flex-wrap gap-2">
+                                            <span
+                                                class="bg-gray-100 px-3 py-1 rounded-lg text-gray-700 text-sm hover:bg-gray-200 transition-colors">PLC</span>
+                                            <span
+                                                class="bg-gray-100 px-3 py-1 rounded-lg text-gray-700 text-sm hover:bg-gray-200 transition-colors">Fuzzy
+                                                Logic</span>
+                                            <span
+                                                class="bg-gray-100 px-3 py-1 rounded-lg text-gray-700 text-sm hover:bg-gray-200 transition-colors">Python</span>
+                                            <span
+                                                class="bg-gray-100 px-3 py-1 rounded-lg text-gray-700 text-sm hover:bg-gray-200 transition-colors">SolidWorks</span>
+
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
             </section>
 
             <section class="bg-white p-6 rounded-xl shadow-sm mb-6">
-                <h2 class="text-xl font-extrabold text-gray-900 mb-3">Education</h2>
-                <div class="space-y-4">
-                    <p class="text-gray-700">
-                        <span class="font-semibold">M.Sc. Computational Science and Engineering</span> -
-                        Technical University of Munich, Germany | 10/20 - 12/23 | 1.7/1.0<br>
-                        Topics: HPC, High Dimensional Data Reduction, ML, DL, Scientific Computing
-                    </p>
-                    <p class="text-gray-700">
-                        <span class="font-semibold">B.Sc. Mechatronics Engineering</span> -
-                        Ain Shams University, Egypt | 09/07 - 06/13 | GPA: 2.7/4.0
-                    </p>
-                    <p class="text-gray-700">
-                        <span class="font-semibold">Secondary School - Natural Sciences</span> -
-                        Al-Shati Secondary School, Saudi Arabia | 09/04 - 06/07 | GPA: 3.9/4.0
-                    </p>
+                <h2 class="text-xl font-extrabold text-gray-900 mb-4">Education</h2>
+                <div class="space-y-6">
+                    <div class="border-l-4 border-blue-500 pl-4">
+                        <h3 class="text-lg font-semibold text-gray-900">M.Sc. Computational Science and Engineering</h3>
+                        <p class="text-gray-600 italic text-sm">Technical University of Munich, Germany | 10/20 - 12/23
+                            | Grade: 1.7/1.0</p>
+                        <p class="text-gray-700 mt-1">Study focuses on HPC, High Dimensional Data Reduction, ML, DL, and
+                            Scientific Computing</p>
+                    </div>
+                    <div class="border-l-4 border-green-500 pl-4">
+                        <h3 class="text-lg font-semibold text-gray-900">B.Sc. Mechatronics Engineering</h3>
+                        <p class="text-gray-600 italic text-sm">Ain Shams University, Egypt | 09/07 - 06/13 | GPA:
+                            2.7/4.0</p>
+                        <p class="text-gray-700 mt-1">With graduation project GPA of 4.0/4.0.</p>
+                    </div>
+                    <div class="border-l-4 border-green-500 pl-4">
+                        <h3 class="text-lg font-semibold text-gray-900">Secondary School - Natural Sciences</h3>
+                        <p class="text-gray-600 italic text-sm">Al-Shati Secondary School, Saudi Arabia | 09/04 - 06/07
+                            | GPA: 3.9/4.0</p>
+                        <p class="text-gray-700 mt-1">Graduated with distinction, studied natural and engineering
+                            sciences</p>
+                    </div>
                 </div>
             </section>
 
