--- a/index.html
+++ b/index.html
@@ -65,34 +65,45 @@
 
             <section class="bg-white p-6 rounded-xl shadow-sm mb-6">
                 <h2 class="text-xl font-extrabold text-gray-900 mb-3">Summary</h2>
-                <p class="text-gray-700">
-                    Over 9 years of experience delivering high-performance solutions in C++/C, Python, Algorithms, HPC(
-                    CUDA, SIMD, OpenMP, MPI), Graphics(OpenGL), driving innovation and efficiency in automotive and
-                    research applications.
-                </p>
-            </section>
+                <div class="space-y-6">
+                    <p class="text-gray-700">
+                        Over 9 years of experience delivering solutions and research in API Interface design, Algorithms
+                        optimization,
+                        HPC, Graphics, and
+                        AI in automotive and research.
+                    </p>
 
-            <section class="bg-white p-6 rounded-xl shadow-sm mb-6">
-                <h2 class="text-xl font-extrabold text-gray-900 mb-4">Skills</h2>
-                <div class="grid grid-cols-3 gap-4 text-gray-700">
-                    <div class="bg-gray-100 px-4 py-2 rounded-lg text-center hover:bg-gray-200 transition-colors">C++
-                        (14/17/20)</div>
-                    <div class="bg-gray-100 px-4 py-2 rounded-lg text-center hover:bg-gray-200 transition-colors">Python
+                    <div class="flex flex-wrap gap-2 text-gray-700">
+                        <span
+                            class="bg-gray-100 px-3 py-1 rounded-lg text-sm hover:bg-gray-200 transition-colors">C++</span>
+                        <span
+                            class="bg-gray-100 px-3 py-1 rounded-lg text-sm hover:bg-gray-200 transition-colors">Python</span>
+                        <span
+                            class="bg-gray-100 px-3 py-1 rounded-lg text-sm hover:bg-gray-200 transition-colors">Qt</span>
+                        <span class="bg-gray-100 px-3 py-1 rounded-lg text-sm hover:bg-gray-200 transition-colors">
+                            ROS/ROS2</span>
+                        <span
+                            class="bg-gray-100 px-3 py-1 rounded-lg text-sm hover:bg-gray-200 transition-colors">CUDA</span>
+                        <span
+                            class="bg-gray-100 px-3 py-1 rounded-lg text-sm hover:bg-gray-200 transition-colors">OpenMP</span>
+                        <span
+                            class="bg-gray-100 px-3 py-1 rounded-lg text-sm hover:bg-gray-200 transition-colors">MPI</span>
+                        <span class="bg-gray-100 px-3 py-1 rounded-lg text-sm hover:bg-gray-200 transition-colors">AVX
+                            SIMD</span>
+                        <span
+                            class="bg-gray-100 px-3 py-1 rounded-lg text-sm hover:bg-gray-200 transition-colors">Qualcomm
+                            HTP</span>
+                        <span
+                            class="bg-gray-100 px-3 py-1 rounded-lg text-sm hover:bg-gray-200 transition-colors">OpenGL</span>
+                        <span class="bg-gray-100 px-3 py-1 rounded-lg text-sm hover:bg-gray-200 transition-colors">HPC
+                            &</span>
+                        <span
+                            class="bg-gray-100 px-3 py-1 rounded-lg text-sm hover:bg-gray-200 transition-colors">ADAS</span>
+                        <span
+                            class="bg-gray-100 px-3 py-1 rounded-lg text-sm hover:bg-gray-200 transition-colors">AUTOSAR</span>
+                        <span class="bg-gray-100 px-3 py-1 rounded-lg text-sm hover:bg-gray-200 transition-colors">Edge
+                            HW</span>
                     </div>
-                    <div class="bg-gray-100 px-4 py-2 rounded-lg text-center hover:bg-gray-200 transition-colors">Qt &
-                        ROS</div>
-                    <div class="bg-gray-100 px-4 py-2 rounded-lg text-center hover:bg-gray-200 transition-colors">CUDA &
-                        OpenMP</div>
-                    <div class="bg-gray-100 px-4 py-2 rounded-lg text-center hover:bg-gray-200 transition-colors">SIMD &
-                        MPI</div>
-                    <div class="bg-gray-100 px-4 py-2 rounded-lg text-center hover:bg-gray-200 transition-colors">OpenGL
-                        & Graphics</div>
-                    <div class="bg-gray-100 px-4 py-2 rounded-lg text-center hover:bg-gray-200 transition-colors">HPC &
-                        ADAS</div>
-                    <div class="bg-gray-100 px-4 py-2 rounded-lg text-center hover:bg-gray-200 transition-colors">
-                        AUTOSAR</div>
-                    <div class="bg-gray-100 px-4 py-2 rounded-lg text-center hover:bg-gray-200 transition-colors">
-                        Embedded Systems</div>
                 </div>
             </section>
 
