--- a/index.html
+++ b/index.html
@@ -71,7 +71,12 @@
                         Over 9 years of experience delivering solutions and research in API Interface design, Algorithms
                         optimization,
                         HPC, Graphics, and
-                        AI in automotive and research.
+                        AI in automotive and research. Specialized in optimizing AI models for both x86 and edge
+                        hardware,
+                        making them lighter and faster while maintaining accuracy. Extensive expertise in local (IPC)
+                        and
+                        remote (RPC, Flatbuffers, Protobuf)
+                        process communication development with modern compression algorithms.
                     </p>
 
                     <div class="flex flex-wrap gap-2 text-gray-700">
@@ -122,14 +127,19 @@
                                 pruning</li>
                             <li>Optimize ONNX to Qualcomm's Neural Networks (QNN) conversion environment and deployment
                             </li>
+                            <li>Optimize QNN AI model inference runtime on edge HW through SOTA quantization and
+                                pruning techniques</li>
                             <li>Support feature teams in deployment and vision models performance profiling/debugging
                             </li>
-                            <li>Develop and tune custom ops for Edge HW neural chip (Qualcomm)</li>
-                            <li>Develop and optimize VLIW Qualcomm HTP cores to perform efficient instruction packing
-                                (Assembly)</li>
-                            <li>Achieved compute bound territory of the theoretical peak for the custom ops in contrast
+                            <li>Develop and tune custom operations for Edge HW (Hexagon) NPU from Qualcomm</li>
+                            <li>Develop and optimize custom model operations on VLIW Qualcomm HTP cores to exploit 4-way
+                                SIMD instruction packing
+                            </li>
+                            <li>Achieved compute bound territory of the theoretical peak for the custom operations in
+                                contrast
                                 to some native QNN ops</li>
-                            <li>Maintain and refactor the environment to facilitate multi custom ops implementations for
+                            <li>Maintain and refactor the environment to facilitate multi custom operations
+                                implementations for
                                 each supported
                                 accelerator (CUDA, HTP, CPU, ONNX)</li>
                         </ul>
@@ -204,6 +214,9 @@
                                     multiple projects</li>
                                 <li>Automated ~20% of repetitive tasks by deploying offline to automation
                                     scripts</li>
+                                <li>Implemented zero-copy IPC using modern libraries (Iceoryx) for high-performance
+                                    data exchange and low latency RPC using Flatbuffers for Simulation in the loop (SiL)
+                                </li>
                             </ul>
 
                             <div class="space-y-6">
