--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
                 <h2 class="text-xl font-extrabold text-gray-900 mb-3">Summary</h2>
                 <div class="space-y-6">
                     <p class="text-gray-700">
-                        Senior ML Optimization Engineer with 9+ years of experience in HPC, HMI, and AI optimization,
-                        specializing in automotive and research applications. Expert in designing automotive safety
-                        compliant API/Architecture, developing high fidelity-low latency HMI render engines for GPUs,
-                        optimizing AI
-                        models size and inference runtime for edge
-                        computing, high-performance communication systems using modern IPC/RPC
-                        frameworks and search-based optimization and compression algorithms.
+                        Senior ML Optimization Engineer with 9+ years of experience in HPC, Graphics, and AI
+                        optimization,
+                        specializing in automotive and research applications. Proven expertise in optimizing AI models
+                        for edge computing, developing high-fidelity render engines, and designing safety-compliant
+                        automotive architectures. Extensive experience in multi-core/multi-node numerical simulations
+                        and high-performance communication systems, with strong focus on optimizing complex data
+                        structures and implementing efficient search and compression algorithms.
                     </p>
 
                     <div class="flex flex-wrap gap-2 text-gray-700">
@@ -435,7 +435,8 @@
                 <h2 class="text-xl font-extrabold text-gray-900 mb-4">Education</h2>
                 <div class="space-y-6">
                     <div class="border-l-4 border-blue-500 pl-4">
-                        <h3 class="text-lg font-semibold text-gray-900">M.Sc. Computational Science and Engineering</h3>
+                        <h3 class="text-lg font-semibold text-gray-900">M.Sc. Computational Science and Engineering
+                            (Part-time)</h3>
                         <p class="text-gray-600 italic text-sm">Technical University of Munich, Germany | 10/20 - 09/25
                             | Grade: 1.7/1.0</p>
                         <p class="text-gray-700 mt-1">Specialized in HPC, High Dimensional Data Reduction, Deep
