--- a/index.html
+++ b/index.html
@@ -68,11 +68,10 @@
                 <h2 class="text-xl font-extrabold text-gray-900 mb-3">Summary</h2>
                 <div class="space-y-6">
                     <p class="text-gray-700">
-                        Senior ML Optimization Engineer with 9+ years of experience in HPC, Graphics, and AI
-                        optimization,
-                        specializing in automotive and research applications. Proven expertise in optimizing AI models
-                        for edge computing, developing high-fidelity render engines, and designing safety-compliant
-                        automotive architectures. Extensive experience in multi-core/multi-node numerical simulations
+                        9+ years of experience in HPC, Graphics, and AI optimization.
+                        Proven expertise in developing high-fidelity render engines, and designing safety-critical
+                        automotive architectures and optimizing large AI models for edge computing. Extensive experience
+                        in multi-core/multi-node simulations
                         and high-performance communication systems, with strong focus on optimizing complex data
                         structures and implementing efficient search and compression algorithms.
                     </p>
