--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
                     class="text-5xl font-extrabold text-gray-900 bg-gradient-to-r from-gray-900 to-gray-700 bg-clip-text text-transparent">
                     Ahmed Sam Fouad
                 </h1>
-                <p class="text-xl text-gray-600 mt-2">Senior Software Engineer Specializing in HPC, HMI, Numerics and AI
+                <p class="text-xl text-gray-600 mt-2">Senior Software Engineer Specializing in HPC, Graphics, Numerics
+                    and AI
                 </p>
                 <p class="text-gray-500 text-sm mt-3">
                     <a href="mailto:eng.a7med.sam@gmail.com" class="hover:text-gray-700">eng.a7med.sam@gmail.com</a> |
