--- a/index.html
+++ b/index.html
@@ -107,6 +107,13 @@
                             class="bg-gray-100 px-3 py-1 rounded-lg text-sm hover:bg-gray-200 transition-colors">AUTOSAR</span>
                         <span class="bg-gray-100 px-3 py-1 rounded-lg text-sm hover:bg-gray-200 transition-colors">Edge
                             Computing</span>
+                        <span
+                            class="bg-gray-100 px-3 py-1 rounded-lg text-sm hover:bg-gray-200 transition-colors">CI/CD</span>
+                        <span
+                            class="bg-gray-100 px-3 py-1 rounded-lg text-sm hover:bg-gray-200 transition-colors">Jenkins</span>
+                        <span
+                            class="bg-gray-100 px-3 py-1 rounded-lg text-sm hover:bg-gray-200 transition-colors">Github
+                            Workflows</span>
                     </div>
                 </div>
             </section>
