--- a/index.html
+++ b/index.html
@@ -129,14 +129,12 @@
                         <ul class="mt-2 text-gray-700 list-disc list-inside">
                             <li>Optimized ONNX models for edge deployment through post-training quantization (PTQ) and
                                 pruning techniques</li>
-                            <li>Developed and optimized custom operations for Qualcomm's Hexagon NPU(HTP, HVX, HMX)
-                                cores,
-                                achieving compute-bound territory of theoretical peak performance</li>
+                            <li>Developed and optimized custom operations for Qualcomm's Hexagon NPU (HTP, HVX, HMX)
+                                cores, achieving compute-bound performance at near-theoretical peak efficiency</li>
                             <li>Enhanced QNN AI model inference runtime on edge hardware through SOTA quantization and
                                 pruning</li>
-                            <li>Maintained and refactored vision models's multi-accelerator offloading environment;
-                                supporting CUDA, HTP, CPU, and
-                                ONNX operations</li>
+                            <li>Maintained and refactored vision models' multi-accelerator offloading environment
+                                supporting CUDA, HTP, CPU, and ONNX operations</li>
                             <li>Provided technical support for feature teams in vision models deployment and performance
                                 optimization</li>
                         </ul>
@@ -174,8 +172,9 @@
                             <ul class="mt-2 text-gray-700 list-disc list-inside">
                                 <li>Architected and implemented robust HMI backend algorithms, optimizing HD complex
                                     maps data processing</li>
-                                <li>Developed zero-copy IPC using Iceoryx and low-latency RPC with Flatbuffers for
-                                    the HMI abstraction backend module in Simulation in the loop (SiL)</li>
+                                <li>Implemented zero-copy inter-process communication using Iceoryx and low-latency RPC
+                                    with Flatbuffers for the HMI abstraction backend module in Simulation-in-the-Loop
+                                    (SiL)</li>
                                 <li>Reduced interface maintenance by 90% through automated interface generation pipeline
                                     using Jinja2 templates</li>
                                 <li>Optimized HMI backend performance, achieving 2x core kernel speedup and 30% memory
@@ -186,9 +185,8 @@
                                     multiple projects</li>
                                 <li>Eliminated heavy and repetitive usage of interfaces adapters via lightweight
                                     proper variant interface decomposition.</li>
-                                <li>Designed a single HMI backend interface statically carries defined and compiled
-                                    compiled custom
-                                    payloads from/to multiple customer functions.</li>
+                                <li>Designed a unified HMI backend interface that statically carries predefined and
+                                    compiled custom payloads between multiple customer functions</li>
                                 <li>Developed enabler tooling GUI apps to visually design a custom payload for the HMI
                                     interface
                                     using
